--- a/index.html
+++ b/index.html
@@ -1,31 +1,157 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-    <header class="header">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Первый спринт на Яндекс Практикуме">
+	  <meta name="keywords" content="HTML, CSS, Вёрстка">
+	  <meta name="author" content="Иван Петрович Сидоров">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Научиться учиться</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <div class="logo logo_place_header"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link" target="_blank"> Узнать &rarr;</a></p>
+        <div class="header__square-pic"></div>
+        <img src="./images/header-image.png" alt="Упсс" class="header__main-illustration">
+      </header>
 
-    </header>
-    <main class="content">
-      <section class="description">
-      </section>
+      <main class="content">
+        <section class="description">
+          <div class="two-columns centered-block">
+            <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            </div>
+          </div>
+        </section>
 
-      <section class="digits">
-      </section>
+        <section class="digits">
+          <h3 class="section-title centered-block">Цифры и факты</h3>
+          <h4 class="section-subtitle centered-block">Про учёбу и мозг</h4>
+          <div class="table centered-block">
+            <div class="table__cell">
+              <h5 class="table__heading">86 миллиардов</h5>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">2.1 миллиарда</h5>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">1000 терабайт</h5>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">500 триллионов</h5>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">420 миллионов</h5>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">17–20 лет</h5>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">1885 год</h5>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h5 class="table__heading">1889 год</h5>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </div>
+        </section>
 
-      <section class="feinman">
-      </section>
+        <section class="feynman">
+          <h2 class="feynman__title centered-block">Метод Фейнмана</h2>
+          <p class="feynman__subtitle centered-block">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link" target="_blank">Подробнее &rarr;</a>
+        </section>
 
-      <section class="kaufman">
-      </section>
-    </main>
-    <footer class="footer">
+        <section class="kaufman">
+          <img src="./images/kaufman-triangle.svg" alt="Упсс" class="kaufman__triangle">
+          <h3 class="section-title section-title_theme_dark centered-block">Принципы обучения</h3>
+          <h4 class="section-subtitle section-subtitle_theme_dark centered-block">от Джоша Кауфмана</h4>
+          <div class="table centered-block">
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">1</h5>
+              <p class="table__text">Выберите привлекательный проект.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">2</h5>
+              <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">3</h5>
+              <p class="table__text">Определите целевой уровень мастерства.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">4</h5>
+              <p class="table__text">Разбейте навык на элементы.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">5</h5>
+              <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">6</h5>
+              <p class="table__text">Устраните препятствия для занятий.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">7</h5>
+              <p class="table__text">Выделите специальное время для занятий.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">8</h5>
+              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">9</h5>
+              <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div>
+            <div class="table__cell_theme_dark">
+              <h5 class="table__heading">10</h5>
+              <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </div>
+        </section>
+      </main>
 
-    </footer>
-  </div>
-</body>
+      <footer class="footer">
+        <div class="footer_columns centered-block">
+          <div class="footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <p class="footer__author"> &copy; 2020 Иван Петрович Сидоров</p>
+          </div>
+          <div class="footer__column_content_info">
+            <h6 class="footer__column-heading">О Практикуме</h6>
+            <ul class="list">
+              <li><a href="#" class="footer__column-links" target="_blank">Главная</a></li>
+              <li><a href="#" class="footer__column-links" target="_blank">Концепция</a></li>
+              <li><a href="#" class="footer__column-links" target="_blank">Наставники</a></li>
+            </ul>
+          </div>
+          <div class="footer__column_content_social">
+            <h6 class="footer__column-heading">Соцсети</h6>
+            <ul class="list">
+              <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-links" target="_blank"><img src="./images/facebook_color_white.svg" alt="Упсс" class="footer__social-icon">Facebook</a></li>
+              <li><a href="https://vk.com/yandex.praktikum" class="footer__column-links" target="_blank"><img src="./images/vk_color_white.svg" alt="Упсс" class="footer__social-icon">Вконтакте</a></li>
+              <li><a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-links" target="_blank"><img src="./images/instagram_color_white.svg" alt="Упсс" class="footer__social-icon">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
