--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
       <footer class="footer">
         <div class="footer__columns">
-          <div class=".footer__column footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
             <p class="footer__author"> &copy; 2020 Иван Петрович Сидоров</p>
           </div>
-          <nav class=".footer__column footer__column_content_info">
+          <nav class="footer__column footer__column_content_info">
             <h4 class="footer__column-heading">О Практикуме</h4>
             <ul class="footer__column-links">
               <li><a href="#" class="footer__column-link" target="_blank">Главная</a></li>
@@ -142,7 +142,7 @@
               <li><a href="#" class="footer__column-link" target="_blank">Наставники</a></li>
             </ul>
           </nav>
-          <div class=".footer__column footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__column-links">
               <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="./images/facebook_color_white.svg" alt="FB" class="footer__social-icon">Facebook</a></li>
