--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Первый спринт на Яндекс Практикуме">
 	  <meta name="keywords" content="HTML, CSS, Вёрстка">
 	  <meta name="author" content="Иван Петрович Сидоров">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./vendor/normalize.css">
+    <link rel="stylesheet" href="index.css">
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -16,20 +16,76 @@
         <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link" target="_blank"> Узнать &rarr;</a></p>
-        <div class="header__square-pic"></div>
-        <img src="./images/header-image.png" alt="Опять двойка_Решетников_Третьяковка" class="header__main-illustration">
+        <div class="header__square-pic rotation"></div>
+        <img src="./images/header/header-image.png" alt="Опять двойка_Решетников_Третьяковка" class="header__main-illustration">
       </header>
 
       <main class="content">
         <section class="description">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
               <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
               <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
+          </article>
+        </section>
+
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+                <img src="./images/cards/cards-attention.png" alt="Обложка интересной книги" class="cards__image"></img>
+                <h3 class="cards__title">Два вида внимания</h3>
+                <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            </div>
+            <div class="cards__item">
+                <img src="./images/cards/cards-recall.png" alt="Скульптура мальчика" class="cards__image"></img>
+                <h3 class="cards__title">Recall</h3>
+                <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards/cards-interliving.png" alt="Черно-белый павильон" class="cards__image"></img>
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards/cards-question.png" alt="Мужчина в просторной комнате" class="cards__image"></img>
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards/cards-competence.png" alt="Стопка книг" class="cards__image"></img>
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </div>
           </div>
+        </section>
+
+        <section class="video">
+          <h2 class="section-title">Видео нa TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+          <div class="video__iframes">
+            <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe" allowfullscreen>Видосик на YouTube</iframe>
+            <iframe src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe" allowfullscreen>Видосик на YouTube</iframe>
+          </div>
+        </section>
+
+        <section class="oakley">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            </div>
+          </article>
+        </section>
+
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link" target="_blank">Подробнее &rarr;</a>
         </section>
 
         <section class="digits">
@@ -73,14 +129,22 @@
           </div>
         </section>
 
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="feynman__link" target="_blank">Подробнее &rarr;</a>
+        <section class="khan">
+          <article class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <div class="khan__book-pic"></div>
+              <a href="http://mdk-arbat.ru/book/853742" class="khan__buy-link" target="_blank">Купить книгу &rarr;</a>
+            </div>
+          </article>
         </section>
 
         <section class="kaufman">
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
           <div class="table table_theme_dark">
@@ -126,6 +190,17 @@
             </div>
           </div>
         </section>
+
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+          <ul class="resources__logo-zone">
+            <li><img src="./images/resources/resources-arzamas.svg" class="resources__logo" alt="Arzamas"></li>
+            <li><img src="./images/resources/resources-n1.svg" class="resources__logo" alt="N+1"></li>
+            <li><img src="./images/resources/resources-strelka.svg" class="resources__logo" alt="Strelka"></li>
+            <li><img src="./images/resources/resources-polka.svg" class="resources__logo" alt="Полка"></li>
+          </ul>
+        </section>
       </main>
 
       <footer class="footer">
@@ -145,9 +220,9 @@
           <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__column-links">
-              <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="./images/facebook_color_white.svg" alt="FB" class="footer__social-icon">Facebook</a></li>
-              <li><a href="https://vk.com/yandex.praktikum" class="footer__column-link" target="_blank"><img src="./images/vk_color_white.svg" alt="BK" class="footer__social-icon">Вконтакте</a></li>
-              <li><a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-link" target="_blank"><img src="./images/instagram_color_white.svg" alt="Insta" class="footer__social-icon">Instagram</a></li>
+              <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="./images/footer/facebook_color_white.svg" alt="FB" class="footer__social-icon">Facebook</a></li>
+              <li><a href="https://vk.com/yandex.praktikum" class="footer__column-link" target="_blank"><img src="./images/footer/vk_color_white.svg" alt="BK" class="footer__social-icon">Вконтакте</a></li>
+              <li><a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-link" target="_blank"><img src="./images/footer/instagram_color_white.svg" alt="Insta" class="footer__social-icon">Instagram</a></li>
             </ul>
           </div>
         </div>
